Hopefully make build reliable