@@ -1,5 +1,8 @@
 (ns build
-  (:require [clojure.tools.build.api :as b]
+  (:require [babashka.process :as p]
+            [babashka.fs :as fs]
+            babashka.process.pprint
+            [clojure.tools.build.api :as b]
             [shadow.cljs.devtools.api :as shadow]))
 
 (def version "0.0.1-SNAPSHOT")
@@ -31,3 +34,56 @@
            :basis @basis})
 
   (println "Uberjar:" uber-file))
+
+(defn native-image [_]
+  (println "Compiling GraalVM feature classes")
+  (b/javac {:src-dirs ["src/java"]
+            :class-dir "target/native-image-configuration/classes"
+            :basis @basis
+            :javac-opts ["--add-exports" "org.graalvm.nativeimage/org.graalvm.nativeimage.impl=ALL-UNNAMED"
+                         "-Xlint:deprecation"]})
+
+  ;; Copy reachability metadata into classpath
+  (doseq [path (fs/list-dir "graalvm-reachability-metadata/metadata")]
+    (fs/copy-tree path "target/native-image-configuration/META-INF/native-image"))
+
+  (println "Building native image")
+  (p/shell "native-image"
+
+           ;; Clojure namespaces
+           "--features=clj_easy.graal_build_time.InitClojureClasses"
+
+           ;; Buddy support
+           "--add-exports" "org.graalvm.nativeimage/org.graalvm.nativeimage.impl=ALL-UNNAMED"
+           "--features=graalvm.features.BouncyCastleFeature"
+
+           ;; Logback related classes
+           "--initialize-at-build-time=ch.qos.logback"
+           "--initialize-at-build-time=ch.qos.logback.classic.Logger"
+           "--initialize-at-build-time=org.xml.sax"
+
+           ;; Don't allow to fall back to launching a VM
+           "--no-fallback"
+
+           ;; To make shutdown hooks work
+           "--install-exit-handlers"
+
+           #_"--initialize-at-run-time=buddy.core.bytes__init"
+           #_"--initialize-at-run-time=clojure.math__init"
+
+           "-H:+UnlockExperimentalVMOptions"
+           "-H:IncludeResources=swagger-ui/.*" ;; TODO: Should create META-INF/native-image/metosin/ring-swagger-ui/native-image.properties
+
+           "-H:+PrintClassInitialization"
+
+           "-cp" (str
+                  ;; From training run with native-image-agent
+                  "target/native-image-configuration"
+                  ;; Compiled GraalVM feature classes, buddy support
+                  ":target/native-image-configuration/classes")
+
+           "--native-image-info"
+
+           "-jar" "target/app.jar"
+           "-o" "target/app")
+  (println "native image created: target/app"))
